<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL_CONSTANT_UNITS" Id="{3874600e-f681-4408-a3d0-02566e97ac03}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	//Bit0 , enable step control
	//Bit1 , trigger step control
	//Bit2 , pause state
	//Bit3 , (indexer slave) direct off working signal
	//Bit4 , (indexer slave) working signal override
	//Bit5 , (indexer slave) material is valid
	//Bit6 , 
	//Bit7 , last pause parent status
	ucEnStep : INT := 0;
	ucTrigStep : INT :=1;
	ucPause : INT :=2;
	ucIsBypassed : INT :=3;
	ucWorkingOverride : INT :=4;
	ucMaterialOverride : INT :=5;
	ucLastParentStatus : INT :=7;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>